--- a/src/input.css
+++ b/src/input.css
@@ -3,30 +3,16 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=Raleway:wght@500&family=Roboto:wght@100;300;500;700&display=swap');
 
-
-
-.fundo1{
-	background: black;
-	filter: blur(56.5px);
+.fundo1 {
+    background: linear-gradient(0deg, #382D06 0%, #382D06 100%), linear-gradient(0deg, #363517 0%, #363517 100%), #948F24;
 }
 
-.fundo2{
-	border-radius: 50%;
-	background: linear-gradient(0deg, #382D06 0%, #382D06 100%), linear-gradient(0deg, #363517 0%, #363517 100%), #948F24;
-	filter: blur(56.5px);
+.fundo2 {
+    background: linear-gradient(0deg, #382D06 0%, #382D06 100%), linear-gradient(0deg, #363517 0%, #363517 100%), #948F24;
 }
 
-.fundo3{
-	border-radius: 50%;
-	background: linear-gradient(0deg, #342E1E 0%, #342E1E 100%), 
+.fundo3 {
+    background: linear-gradient(0deg, #342E1E 0%, #342E1E 100%), 
 	linear-gradient(0deg, #0B0A06 0%, #0B0A06 100%), 
-	#000;
-	filter: blur(90.5px);
+	#000
 }
-
-.fundo4 {
-	border-radius: 19px;
-	filter: blur(63.5px);
-}
-
-
